# ZYArm-X1

./: .gitignore  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  TRADEMARKS.md
LICENSES/: README.md
data/: README.md
docs/: README.md  后续文档计划.md  术语与工具速查.md  资料补充清单.md
docs/01_产品简介/: 01_项目定位.md  02_功能总览.md  02_适用人群.md  03_核心优势.md  03_硬件组成.md  04_功能总览.md  04_软件生态.md  05_安全须知.md  05_硬件组成.md  06_软件生态.md  07_安全须知.md  README.md
docs/02_快速上手/: 01_你需要准备什么.md  02_确认硬件状态.md  03_连接电脑并找到串口.md  04_读取机械臂状态.md  05_发送第一次动作.md  06_记录状态并复现.md  07_下一步做什么.md  README.md
docs/03_安装与准备/: 01_Python_SDK环境.md  02_Web仿真环境.md  03_ROS2_MoveIt_Gazebo环境.md  04_LeRobot环境.md  05_固件开发环境.md  06_安装完成检查.md  README.md
docs/04_基础操作/: 01_串口指令格式与回包.md  02_状态查询与版本信息.md  03_复位停止与安全动作.md  04_关节与夹爪控制.md  05_运动学逆解与参数.md  06_动作录制与回放.md  07_遥控与主从模式.md  08_状态上报与诊断.md  README.md
docs/05_常用玩法/: 01_Web仿真体验.md  02_动作录制与复现.md  03_手柄遥操.md  (+5 more)
firmware/: .gitignore  ArmV1.ioc
software/: README.md
software/examples/camera_pick/deptrum/sample_touch/: CMakeLists.txt  sample_touch.cpp
software/examples/camera_pick/orbbec/: CMakeLists.txt  README_CN.md  Sample-RobotArmPick.cpp
software/lerobot_robot_zyarm/: README.md  pyproject.toml
software/lerobot_robot_zyarm/src/lerobot_robot_zyarm/: __init__.py  config.py  conversion.py  features.py  robot.py  teleoperator.py
software/lerobot_robot_zyarm/tests/: conftest.py  test_config.py  test_conversion.py  test_robot.py  test_teleoperator.py
software/ros2_ws/src/zyarm_bringup/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/zyarm_bringup/launch/: bringup_x1_standard_real_ros2_control.launch.py  bringup_x1_standard_ros2_control.launch.py  teleop_only_system.launch.py
software/ros2_ws/src/zyarm_bringup/tests/: test_x1_standard_real_ros2_control_launch.py
software/ros2_ws/src/zyarm_control/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/zyarm_control/config/: controller_contract.yaml  zyarm_x1_standard_controllers.yaml  zyarm_x1_standard_gazebo_controllers.yaml  zyarm_x1_standard_real_controllers.yaml
software/ros2_ws/src/zyarm_control/tests/: test_controller_contract.py
software/ros2_ws/src/zyarm_description/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/zyarm_description/config/x1_standard/: gazebo_camera_frames.yaml  joint_names.yaml
software/ros2_ws/src/zyarm_description/launch/: display_x1_standard.launch.py
software/ros2_ws/src/zyarm_description/meshes/x1_standard/: README.md  claw1.STL  claw2.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
software/ros2_ws/src/zyarm_description/rviz/: display_x1_standard.rviz
software/ros2_ws/src/zyarm_description/tests/: test_x1_standard_xacro_gazebo.py
software/ros2_ws/src/zyarm_description/urdf/x1_standard/: robot.urdf.xacro  source.urdf
software/ros2_ws/src/zyarm_gazebo/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/zyarm_gazebo/config/: world.yaml
software/ros2_ws/src/zyarm_gazebo/launch/: bringup_pick_place_world.launch.py
software/ros2_ws/src/zyarm_gazebo/models/goal_zone/: model.config  model.sdf
software/ros2_ws/src/zyarm_gazebo/models/pickup_cube/: model.config  model.sdf
software/ros2_ws/src/zyarm_gazebo/scripts/: grasp_manager.py  wait_for_controller_types.py
software/ros2_ws/src/zyarm_gazebo/tests/: test_grasp_manager.py  test_launch_helpers.py  test_scene_defaults.py  test_wait_for_controller_types.py
software/ros2_ws/src/zyarm_gazebo/worlds/: pick_place_world.sdf
software/ros2_ws/src/zyarm_hardware_interface/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/zyarm_hardware_interface/include/zyarm_hardware_interface/: diagnostics.hpp  joint_mapping.hpp  serial_transport.hpp  shell_protocol.hpp  zyarm_system_hardware.hpp
software/ros2_ws/src/zyarm_hardware_interface/plugin/: zyarm_hardware_interface.xml
software/ros2_ws/src/zyarm_hardware_interface/src/: diagnostics.cpp  joint_mapping.cpp  serial_transport.cpp  shell_protocol.cpp  zyarm_system_hardware.cpp
software/ros2_ws/src/zyarm_hardware_interface/test/: test_joint_mapping.cpp  test_serial_transport.cpp  test_shell_protocol.cpp  test_system_hardware_fake.cpp
software/ros2_ws/src/zyarm_interfaces/: CMakeLists.txt  package.xml
software/ros2_ws/src/zyarm_interfaces/srv/: JointIoFast.srv  SetJointTarget.srv  SetRelationEnabled.srv  SetStatusReport.srv
software/ros2_ws/src/zyarm_moveit_config/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/zyarm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_gazebo_controllers.yaml  moveit_real_controllers.yaml  ompl_planning.yaml  planning_scene_monitor_parameters.yaml  trajectory_execution.yaml
software/ros2_ws/src/zyarm_moveit_config/launch/: demo_x1_standard.launch.py  demo_x1_standard_gazebo.launch.py  demo_x1_standard_real.launch.py
software/ros2_ws/src/zyarm_moveit_config/rviz/: moveit_x1_standard.rviz
software/ros2_ws/src/zyarm_moveit_config/srdf/: zyarm_x1_standard.srdf  zyarm_x1_standard_gazebo.srdf
software/ros2_ws/src/zyarm_moveit_config/tests/: test_demo_x1_standard_gazebo_launch.py  test_demo_x1_standard_real_launch.py
software/zyarm_sdk/cpp/: CMakeLists.txt
software/zyarm_sdk/cpp/examples/: fast_io_loop.cpp  read_state.cpp  teleop_step.cpp
software/zyarm_sdk/cpp/include/zyarm_sdk/: arm.hpp  config.hpp  errors.hpp  mapping.hpp  protocol.hpp  retarget.hpp  safety.hpp  teleop.hpp  transport.hpp  types.hpp
software/zyarm_sdk/cpp/src/: arm.cpp  mapping.cpp  protocol.cpp  retarget.cpp  safety.cpp  teleop.cpp  transport.cpp  types.cpp
software/zyarm_sdk/cpp/tests/: fake_transport.hpp  test_arm.cpp  test_protocol.cpp  test_teleop.cpp
software/zyarm_sdk/python/: pyproject.toml
software/zyarm_sdk/python/examples/: fast_io_loop.py  read_state.py  teleop_step.py
software/zyarm_sdk/python/src/zyarm_sdk/: __init__.py  arm.py  config.py  errors.py  mapping.py  protocol.py  retarget.py  safety.py  teleop.py  transport.py  types.py
software/zyarm_sdk/python/tests/: test_arm.py  test_protocol.py  test_teleop.py
(+161 files in other folders)
