[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_zyarm"
version = "0.1.0"
description = "LeRobot native robot and teleoperator adapter for ZYArm."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "lerobot==0.5.1",
  "zyarm-sdk==0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "src",
  "../zyarm_sdk/python/src",
]
