[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zyarm-sdk"
version = "0.1.0"
description = "Standalone Python SDK for ZYArm firmware-level control."
readme = "../README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = [
  "pyserial>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
