<?xml version="1.0"?>
<package format="3">
  <name>zyarm_bringup</name>
  <version>0.1.0</version>
  <description>ROS 2 bringup package for ZyArm.</description>

  <maintainer email="maintainer@zyarm.local">ZyArm Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>zyarm_control</exec_depend>
  <exec_depend>zyarm_description</exec_depend>
  <exec_depend>zyarm_gazebo</exec_depend>
  <exec_depend>zyarm_hardware</exec_depend>
  <exec_depend>zyarm_hardware_interface</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
