<?xml version="1.0"?>
<package format="3">
  <name>zyarm_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation assets and launch files for ZyArm ACT workflow validation.</description>
  <maintainer email="maintainer@zyarm.local">ZyArm Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>zyarm_control</exec_depend>
  <exec_depend>zyarm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
