<?xml version="1.0"?>
<package format="3">
  <name>zyarm_hardware_interface</name>
  <version>0.1.0</version>
  <description>ros2_control hardware_interface plugin for ZyArm real hardware.</description>

  <maintainer email="maintainer@zyarm.local">ZyArm Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
